tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/shifting-50/tproxy/to_b_tproxy/_test_context/VirtualService.2216470902.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      weight: 50
    - destination:
        host: tproxy
      weight: 50
